# personal_site

./: Dockerfile  about.html  deploy.sh  dune-project  index.html  nixpacks.toml  personal_site.opam
.github/workflows/: workflow.yml
assets/public/css/: main.css  water.css
assets/public/documents/: rushes.md
lib/: about_me.ml  dune  index.ml  nav_bar.ml
lib/pages/: about_me.ml  contact.ml  dune  footer.ml  index.ml  nav_bar.ml  portfolio.ml  rushes.ml  util.ml
lib/server/: dune  email.ml  server.ml
test/: dune
